# xyz-generated-typestubs

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  check_in_project.sh  check_out_of_project.sh  pyproject.toml  script.py
.github/workflows/: pytest.yml  ruff.yml
cc/: add.cc  add.h  bind_add.cc
python/xyz_generated_typestubs/: __init__.py
tests/: test_add.py
